# actix-opencv-mjpg-server

./: Cargo.toml
src/: infer.rs  lib.rs  main.rs
