[package]
name = "ruru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "hello"
# path = "src/lib.rs"
# crate-type = ["cdylib"]      # Creates dynamic lib

[[bin]]
name = "infer"
path = "src/infer.rs"

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
log = "0.4"
opencv="0.82.1"
tokio = "1.22"
futures = "0.3"
